[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyorlib"
dynamic = ["version"]
description = "A Python Operations Research Library"
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE" }
authors = [
    { name = "Isaac Da Pena", email = "dapensoft@gmail.com" },
    { name = "Manuel Da Pena", email = "dapensoft@gmail.com" },
]
keywords = []
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Dapensoft/pyorlib"
Documentation = "https://github.com/Dapensoft/pyorlib"
Repository = "https://github.com/Dapensoft/pyorlib"

[project.optional-dependencies]
cplex = ["docplex"]
gurobi = ["gurobipy"]
ortools = ["ortools"]
pulp = ["PuLP"]
all = [
    "docplex",
    "gurobipy",
    "ortools",
    "PuLP"
]

[tool.hatch.version]
path = "pyorlib/__init__.py"
